# purrislav

./: .env  .env.example  .gitignore  Cargo.toml  README.md  database.db
migrations/2025-03-08-131856_create_birthdays/: down.sql  up.sql
migrations/2025-03-12-150044_create_guild_settings/: down.sql  up.sql
src/: color_utils.rs  db.rs  main.rs  models.rs  scheduler.rs
src/commands/: birthday.rs  color.rs  mod.rs  set_channel.rs  settings.rs  sync_roles.rs
src/db/: connection.rs  mod.rs  models.rs  queries.rs  schema.rs
src/events/: login_event.rs  mod.rs
src/utils/: birthday_utils.rs  color_utils.rs  date_utils.rs  embed_utils.rs  mod.rs  user_utils.rs
