[package]
name = "purrislav"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
poise = "0.6.1"
dotenv = "0.15.0"
regex = "1.11.1"
chrono = "0.4.40"
diesel = { version = "2.2.8", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
sys-info = "0.9.1"
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.218", features = ["derive"] }