[package]
name = "purrislav"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
poise = "0.6.2"
dotenv = "0.15.0"
log = "0.4.29"
structured-logger = "1.0.5"
regex = "1.12.3"
chrono = "0.4.40"
diesel = { version = "2.3.9", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }
